--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
     <section class="section">
         <div class="container">
             <div class="servises">
+                <h2 class="services__mail-title">
+                    Services
+                </h2>
 
                 <div class="services__item">
                     <h4 class="services__title">
@@ -80,7 +83,9 @@
                     <div class="services__text">
                         Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
                     </div>
-                    <a class="services__link" href="#">Learn more</a>
+                        <div class="services__footer">
+                        <a class="services__link" href="#">Learn more</a>
+                        </div>
                 </div>
 
                 <div class="services__item">
@@ -90,7 +95,9 @@
                     <div class="services__text">
                         Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
                     </div>
-                    <a class="services__link" href="#">Learn more</a>
+                        <div class="services__footer">
+                        <a class="services__link" href="#">Learn more</a>
+                        </div>
                 </div>
 
                 <div class="services__item">
@@ -100,7 +107,9 @@
                     <div class="services__text">
                         Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
                     </div>
-                    <a class="services__link" href="#">Learn more</a>
+                    <div class="services__footer">
+                        <a class="services__link" href="#">Learn more</a>
+                        </div>
                 </div>
 
                 <div class="services__item">
@@ -110,7 +119,9 @@
                     <div class="services__text">
                         Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
                     </div>
-                    <a class="services__link" href="#">Learn more</a>
+                       <div class="services__footer">
+                        <a class="services__link" href="#">Learn more</a>
+                        </div>
                 </div>
 
             </div>
