--- a/index.html
+++ b/index.html
@@ -124,8 +124,69 @@
                         </div>
                 </div>
 
+            </div><!--/. services -->
+        </div><!--/. container -->
+    </section>
+
+    <!-- Clients -->
+    <section class="section  section--map">
+        <div class="container">
+            <h2 class="section__title"><span>Our</span> Clients</h2>
+        <div class="clients">
+            <div class="clients__logos">
+                <ul class="clients__list">
+                    <li>
+                        <a href="#" target="_blank">
+                            <img src="assets/images/clients/atica.svg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" target="_blank">
+                            <img src="assets/images/clients/hex-lab.svg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" target="_blank">
+                            <img src="assets/images/clients/amara.svg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" target="_blank">
+                            <img src="assets/images/clients/muzica-2.svg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" target="_blank">
+                            <img src="assets/images/clients/solaytic.svg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" target="_blank">
+                            <img src="assets/images/clients/hexa.svg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" target="_blank">
+                            <img src="assets/images/clients/utosia-2.svg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" target="_blank">
+                            <img src="assets/images/clients/fox-hub.svg" alt="">
+                        </a>
+                    </li>
+                </ul>
+            </div><!--/. clients__logos -->
+
+            <div class="clients__rewiews">
+                123
             </div>
-        </div>
+        </div><!--/. clients -->
+
+            <a class="btn btn--orange" href="#">Become a client</a>
+            <span class="clients__love">we love our clients</span>
+
+        </div><!--/. container -->
     </section>
 
 </body>
