--- a/index.html
+++ b/index.html
@@ -179,7 +179,22 @@
             </div><!--/. clients__logos -->
 
             <div class="clients__rewiews">
-                123
+                <div class="rewiews">
+                    <div class="rewiews__item">
+                        <div class="rewiews__header">
+                            <img class="rewiews__photo" src="assets/images/review-photo.png" alt="">
+                                <div class="rewiews_header-content">
+                                    <div class="rewiews__name">Victor Matsakov</div>
+                                    <div class="rewiews__company">MULTI BOX Digital Agency</div>
+                                </div>
+                        </div>
+                        <div class="rewiews__content">
+                           <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
+
+                            <p>Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div><!--/. clients -->
 
@@ -188,6 +203,19 @@
 
         </div><!--/. container -->
     </section>
+
+    <!-- Benefits -->
+    <div class="section">
+        <div class="container">
+            <div class="benefits">
+                <div class="benefits__koll"></div>
+                <div class="benefits__koll">
+                    <img src="assets/images/benefits-photo.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 </body>
 </html>
