--- a/index.html
+++ b/index.html
@@ -208,14 +208,70 @@
     <div class="section">
         <div class="container">
             <div class="benefits">
-                <div class="benefits__koll"></div>
-                <div class="benefits__koll">
-                    <img src="assets/images/benefits-photo.jpg" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
 
+                <div class="benefits__сol">
+                    <ul class="benefits-list">
+                        <li class="benefits-list__item">
+                            <h4 class="benefits-list__title">Safety</h4>
+                            <div class="benefits-list__text">
+                                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod</p>
+                            </div>
+                        </li>
+
+                        <li class="benefits-list__item">
+                            <h4 class="benefits-list__title">High quality drivers</h4>
+                            <div class="benefits-list__text">
+                                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</p>
+                            </div>
+                        </li>
+
+                        <li class="benefits-list__item">
+                            <h4 class="benefits-list__title">Guarantee &amp; Support 24/7</h4>
+                            <div class="benefits-list__text">
+                                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod</p>
+                            </div>
+                        </li>
+
+                        <li class="benefits-list__item">
+                            <h4 class="benefits-list__title">Personal manager</h4>
+                            <div class="benefits-list__text">
+                                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</p>
+                            </div>
+                        </li>
+
+                    </ul>
+                </div><!--/. benefits__col -->
+
+                <div class="benefits__сol">
+                    <img class="img img--skrugl" src="assets/images/benefits-photo.jpg" alt="">
+                </div> 
+            </div><!--/. benefits -->
+        </div><!--/. container -->
+    </div><!--/. section -->
+
+    <!-- Team -->
+    <section class="section  section--gray">
+        <div class="container">
+            <h2 class="section__title">
+                <span>Our</span> team
+            </h2>
+
+            <div class="team">
+                <div class="team__col">
+                    1
+                </div>
+
+                <div class="team__col">
+                    2
+                </div>
+
+                <div class="team__col">
+                    3
+                </div>
+
+            </div><!--/. team -->
+        </div><!--/. container --> 
+    </section>
 
 </body>
 </html>
