--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900|PT+Sans&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900|PT+Sans&display=swap&subset=cyrillic"
+        rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>CenterLogistic</title>
 </head>
+
 <body>
     <!-- Header -->
     <header class="header">
-       <div class="container">
+        <div class="container">
             <div class="header__inner">
-               <img src="assets/images/logo.svg" alt="CenterLogistic">
+                <img src="assets/images/logo.svg" alt="CenterLogistic">
 
                 <nav class="nav">
                     <a class="nav__link active" href="#">Services</a>
@@ -21,8 +24,8 @@
                     <a class="nav__link" href="#">News</a>
                     <a class="nav__link" href="#">Contact Us</a>
                 </nav>
-             </div>
-         </div>
+            </div>
+        </div>
     </header>
 
     <!-- Intro -->
@@ -34,21 +37,22 @@
                     <div class="reqest-form__header">
                         <div class="reqest-form__title">
                             <h3>Get Callback</h3>
-                            <div class="reqest-form__text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                            <div class="reqest-form__text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+                                diam nonumy eirmod tempor invidunt ut
                             </div>
                         </div>
                     </div>
 
                     <div class="reqest-form__content">
-                        <form class= "form" action="/" method="post" >
+                        <form class="form" action="/" method="post">
                             <div class="form__group">
-                                <input class="input input--user" type="text" placeholder="Your name"> 
+                                <input class="input input--user" type="text" placeholder="Your name">
                             </div>
                             <div class="form__group">
-                                <input class="input input--phone" type="tel" placeholder="Your phone"> 
+                                <input class="input input--phone" type="tel" placeholder="Your phone">
                             </div>
                             <div class="form__group">
-                                <input class="input input--email" type="email" placeholder="Your email"> 
+                                <input class="input input--email" type="email" placeholder="Your email">
                             </div>
                             <button class="btn btn--block btn--orange" type="submit">
                                 Call me back
@@ -60,7 +64,7 @@
                 <div class="intro__text">
                     <div class="intro__countries">USA, Europe, Asia</div>
                     <h1 class="intro__title">
-                        <span class= "intro__title-amp">&amp;</span>
+                        <span class="intro__title-amp">&amp;</span>
                         Trans<br>Logistic
                     </h1>
                 </div>
@@ -81,11 +85,12 @@
                         Ground Shipping
                     </h4>
                     <div class="services__text">
-                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
+                        ut labore et dolore magna aliquyam
                     </div>
-                        <div class="services__footer">
+                    <div class="services__footer">
                         <a class="services__link" href="#">Learn more</a>
-                        </div>
+                    </div>
                 </div>
 
                 <div class="services__item">
@@ -95,9 +100,9 @@
                     <div class="services__text">
                         Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
                     </div>
-                        <div class="services__footer">
+                    <div class="services__footer">
                         <a class="services__link" href="#">Learn more</a>
-                        </div>
+                    </div>
                 </div>
 
                 <div class="services__item">
@@ -105,11 +110,12 @@
                         Water Shipping
                     </h4>
                     <div class="services__text">
-                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
+                        ut labore et dolore magna aliquyam
                     </div>
                     <div class="services__footer">
                         <a class="services__link" href="#">Learn more</a>
-                        </div>
+                    </div>
                 </div>
 
                 <div class="services__item">
@@ -119,9 +125,9 @@
                     <div class="services__text">
                         Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
                     </div>
-                       <div class="services__footer">
+                    <div class="services__footer">
                         <a class="services__link" href="#">Learn more</a>
-                        </div>
+                    </div>
                 </div>
 
             </div><!--/. services -->
@@ -132,71 +138,75 @@
     <section class="section  section--map">
         <div class="container">
             <h2 class="section__title"><span>Our</span> Clients</h2>
-        <div class="clients">
-            <div class="clients__logos">
-                <ul class="clients__list">
-                    <li>
-                        <a href="#" target="_blank">
-                            <img src="assets/images/clients/atica.svg" alt="">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" target="_blank">
-                            <img src="assets/images/clients/hex-lab.svg" alt="">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" target="_blank">
-                            <img src="assets/images/clients/amara.svg" alt="">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" target="_blank">
-                            <img src="assets/images/clients/muzica-2.svg" alt="">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" target="_blank">
-                            <img src="assets/images/clients/solaytic.svg" alt="">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" target="_blank">
-                            <img src="assets/images/clients/hexa.svg" alt="">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" target="_blank">
-                            <img src="assets/images/clients/utosia-2.svg" alt="">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" target="_blank">
-                            <img src="assets/images/clients/fox-hub.svg" alt="">
-                        </a>
-                    </li>
-                </ul>
-            </div><!--/. clients__logos -->
+            <div class="clients">
+                <div class="clients__logos">
+                    <ul class="clients__list">
+                        <li>
+                            <a href="#" target="_blank">
+                                <img src="assets/images/clients/atica.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" target="_blank">
+                                <img src="assets/images/clients/hex-lab.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" target="_blank">
+                                <img src="assets/images/clients/amara.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" target="_blank">
+                                <img src="assets/images/clients/muzica-2.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" target="_blank">
+                                <img src="assets/images/clients/solaytic.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" target="_blank">
+                                <img src="assets/images/clients/hexa.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" target="_blank">
+                                <img src="assets/images/clients/utosia-2.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" target="_blank">
+                                <img src="assets/images/clients/fox-hub.svg" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                </div><!--/. clients__logos -->
 
-            <div class="clients__rewiews">
-                <div class="rewiews">
-                    <div class="rewiews__item">
-                        <div class="rewiews__header">
-                            <img class="rewiews__photo" src="assets/images/review-photo.png" alt="">
+                <div class="clients__rewiews">
+                    <div class="rewiews">
+                        <div class="rewiews__item">
+                            <div class="rewiews__header">
+                                <img class="rewiews__photo" src="assets/images/review-photo.png" alt="">
                                 <div class="rewiews_header-content">
                                     <div class="rewiews__name">Victor Matsakov</div>
                                     <div class="rewiews__company">MULTI BOX Digital Agency</div>
                                 </div>
-                        </div>
-                        <div class="rewiews__content">
-                           <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
+                            </div>
+                            <div class="rewiews__content">
+                                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                                    tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
+                                    eos et accusam et justo duo dolores et ea rebum.</p>
 
-                            <p>Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
+                                <p>Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam voluptua. At vero
+                                    eos et accusam et justo duo dolores et ea rebum.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div><!--/. clients -->
+            </div><!--/. clients -->
 
             <a class="btn btn--orange" href="#">Become a client</a>
             <span class="clients__love">we love our clients</span>
@@ -221,7 +231,8 @@
                         <li class="benefits-list__item">
                             <h4 class="benefits-list__title">High quality drivers</h4>
                             <div class="benefits-list__text">
-                                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</p>
+                                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                                    tempor invidunt ut labore et dolore magna aliquyam</p>
                             </div>
                         </li>
 
@@ -235,7 +246,8 @@
                         <li class="benefits-list__item">
                             <h4 class="benefits-list__title">Personal manager</h4>
                             <div class="benefits-list__text">
-                                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</p>
+                                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                                    tempor invidunt ut labore et dolore magna aliquyam</p>
                             </div>
                         </li>
 
@@ -244,7 +256,7 @@
 
                 <div class="benefits__сol">
                     <img class="img img--skrugl" src="assets/images/benefits-photo.jpg" alt="">
-                </div> 
+                </div>
             </div><!--/. benefits -->
         </div><!--/. container -->
     </div><!--/. section -->
@@ -258,20 +270,63 @@
 
             <div class="team">
                 <div class="team__col">
-                    1
+                    <div class="team__item">
+                        <img class="img  img--skrugl  team--photo" src="assets/images/team/team-1.jpg" alt="">
+                        <div class="team__mane">John Smith</div>
+                        <div class="team__prof">Logistic manager - 8 years experience</div>
+                        <ul class="team__contacts">
+                            <li>
+                                <img class="team__contacts-item" src="assets/images/mail-black-icon.svg" alt="">
+                                <a href="mailto:john@centerlogistic.com">john@centerlogistic.com</a>
+                            </li>
+                            <li>
+                                <img class="team__contacts-item" src="assets/images/phone-black-icon.svg" alt="">
+                                <a href="tel:+987412512543">+987412512543</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
 
                 <div class="team__col">
-                    2
+                    <div class="team__item">
+                        <img class="img  img--skrugl  team--photo" src="assets/images/team/team-2.jpg" alt="">
+                        <div class="team__mane">Daniel Kore</div>
+                        <div class="team__prof">Software engineer</div>
+                        <ul class="team__contacts">
+                            <li>
+                                <img class="team__contacts-item" src="assets/images/mail-black-icon.svg" alt="">
+                                <a href="mailto:daniel@centerlogistic.com">daniel@centerlogistic.com</a>
+                            </li>
+                            <li>
+                                <img class="team__contacts-item" src="assets/images/phone-black-icon.svg" alt="">
+                                <a href="tel:+987423252253">+987423252253</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
 
                 <div class="team__col">
-                    3
+                    <div class="team__item">
+                        <img class="img  img--skrugl  team--photo " src="assets/images/team/team-3.jpg" alt="">
+                        <div class="team__mane">Anna Filler</div>
+                        <div class="team__prof">Marketing specialist - 10 years experience</div>
+                        <ul class="team__contacts">
+                            <li>
+                                <img class="team__contacts-item" src="assets/images/mail-black-icon.svg" alt="">
+                                <a href="mailto:anna@centerlogistic.com">anna@centerlogistic.com</a>
+                            </li>
+                            <li>
+                                <img class="team__contacts-item" src="assets/images/phone-black-icon.svg" alt="">
+                                <a href="tel:+98735353456">+98735353456</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
 
             </div><!--/. team -->
-        </div><!--/. container --> 
+        </div><!--/. container -->
     </section>
 
 </body>
+
 </html>
