--- a/index.html
+++ b/index.html
@@ -321,11 +321,26 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </div> 
 
             </div><!--/. team -->
         </div><!--/. container -->
     </section>
+
+    <!-- Mission -->
+    <section class="section">
+        <div class="container">
+            <h2 class="mission-title">Our Mission</h2>
+            <div class="mission">
+                <h3 class="mission__title">To provide our customer qualified services according the international</h3>
+                <h4 class="mission__subtext">Book your Cargo now &amp; Your job just got a lot easier</h4>
+            </div>
+            <div class="text-centr">
+                <button class="btn btn--orange " type="button">Become a client</button>
+            </div>
+        </div><!--/. container -->
+    </section><!--/. section -->
+
 
 </body>
 
