--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                             </li>
                         </ul>
                     </div>
-                </div> 
+                </div>
 
             </div><!--/. team -->
         </div><!--/. container -->
@@ -341,6 +341,43 @@
         </div><!--/. container -->
     </section><!--/. section -->
 
+    <!-- News -->
+    <section class="section">
+        <div class="container">
+            <h2 class="section__title"><span> Interesting</span> to read</h2>
+
+            <div class="news">
+                <div class="news__item">
+                    <h4 class="news__title">
+                        <a href="#">News title</a>
+                    </h4>
+                    <div class="news__text">
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
+                        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
+                        dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor
+                        sit amet.
+                    </div>
+                    <time class="news__data" pubdate="01-03-2022 19:00">1 March, 2022</time>
+
+                </div>
+
+                <div class="news__item">
+                    <h4 class="news__title">
+                        <a href="#">News title</a>
+                    </h4>
+                    <div class="news__text">
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
+                        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
+                        dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor
+                        sit amet.
+                    </div>
+                    <time class="news__data" pubdate="01-03-2022 19:00">1 March, 2022</time>
+
+                </div>
+            </div>
+
+        </div><!--/. container -->
+    </section><!--/. section -->
 
 </body>
 
