--- a/index.html
+++ b/index.html
@@ -44,7 +44,21 @@
                     </div>
 
                     <div class="reqest-form__content">
-                         
+                        <form class="form" action="/" method="post">
+                            <div class="form__group">
+                                <input class="input  input--user" type="text" placeholder="Your name">
+                            </div>
+                            <div class="form__group">
+                                <input class="input  input--phone" type="tel" placeholder="Your phone">
+                            </div>
+                            <div class="form__group">
+                                <input class="input  input--email" type="email" placeholder="Your email">
+                            </div>
+                            <button class="btn  btn--block  btn--orange" type="submit">
+                                <span>Call me back</span>
+                            </button>
+                        </form>
+                    
                     </div>
 
                 </div>
