--- a/blog.html
+++ b/blog.html
@@ -14,34 +14,143 @@
     <header class="header">
         <div class="container">
             <div class="header__inner">
-                <img src="assets/images/logo.svg" alt="CenterLogistic">
+                <a href="index.html"><img src="assets/images/logo.svg" alt="CenterLogistic"></a>
 
                 <nav class="nav">
-                    <a class="nav__link active" href="#">Services</a>
-                    <a class="nav__link" href="#">Clients</a>
-                    <a class="nav__link" href="#">Benefits</a>
-                    <a class="nav__link" href="#">Team</a>
-                    <a class="nav__link" href="#">News</a>
-                    <a class="nav__link" href="#">Contact Us</a>
+                    <a class="nav__link" href="index.html">Home page</a>
+                    <a class="nav__link" href="#">Privacy Policy</a>
+                    <a class="nav__link" href="#">Terma &amp Conditions</a>
                 </nav>
             </div>
         </div>
     </header>
 
-     <!-- Intro -->
-     <div class="intro  intro--blog">
+    <!-- Intro -->
+    <div class="intro  intro--blog"></div>
 
-     </div>
+    <!-- Main -->
+    <section class="section">
+        <div class="container">
+            <main class="main">
+                <div class="main__col">
+                    <h1 class="section__title"><span>Interesting</span> to read</h1>
+
+                    <div class="articles  articles--column">
+                        <article class="articles__item">
+                            <h4 class="articles__title">
+                                <a href="#">News title</a>
+                            </h4>
+                            <div class="articles__text">
+                                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                                invidunt
+                                ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
+                                justo duo
+                                dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
+                                dolor
+                                sit amet.
+                            </div>
+                            <time class="articles__data" pubdate="01-03-2022 19:00">1 March, 2022</time>
+
+                        </article>
+
+                        <article class="articles__item">
+                            <h4 class="articles__title">
+                                <a href="#">News title</a>
+                            </h4>
+                            <div class="articles__text">
+                                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                                invidunt
+                                ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
+                                justo duo
+                                dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
+                                dolor
+                                sit amet.
+                            </div>
+                            <time class="articles__data" pubdate="01-03-2022 19:00">1 March, 2022</time>
+
+                        </article>
+
+                        <article class="articles__item">
+                            <h4 class="articles__title">
+                                <a href="#">News title</a>
+                            </h4>
+                            <div class="articles__text">
+                                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                                invidunt
+                                ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
+                                justo duo
+                                dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
+                                dolor
+                                sit amet.
+                            </div>
+                            <time class="articles__data" pubdate="01-03-2022 19:00">1 March, 2022</time>
+
+                        </article>
+
+                        <article class="articles__item">
+                            <h4 class="articles__title">
+                                <a href="#">News title</a>
+                            </h4>
+                            <div class="articles__text">
+                                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                                invidunt
+                                ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
+                                justo duo
+                                dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
+                                dolor
+                                sit amet.
+                            </div>
+                            <time class="articles__data" pubdate="01-03-2022 19:00">1 March, 2022</time>
+
+                        </article>
+                    </div>
 
 
+                    <a class="btn  btn--orange" href="index.html">Back to home</a>
+                </div>
+                <div class="main_col  main_col--right">
+                    <div class="reqest-form">
+                        <div class="reqest-form__header">
+                            <div class="reqest-form__title">
+                                <h3>Get Callback</h3>
+                                <div class="reqest-form__text">Lorem ipsum dolor sit amet, consetetur sadipscing
+                                    elitr, sed
+                                    diam nonumy eirmod tempor invidunt ut
+                                </div>
+                            </div>
+                        </div>
 
-     <!-- Footer -->
-     <footer class="footer">
+                        <div class="reqest-form__content">
+                            <form class="form" action="/" method="post">
+                                <div class="form__group">
+                                    <input class="input  input--user" type="text" placeholder="Your name">
+                                </div>
+                                <div class="form__group">
+                                    <input class="input  input--phone" type="tel" placeholder="Your phone">
+                                </div>
+                                <div class="form__group">
+                                    <input class="input  input--email" type="email" placeholder="Your email">
+                                </div>
+                                <button class="btn  btn--block  btn--orange" type="submit">
+                                    <span>Call me back</span>
+                                </button>
+                            </form>
+
+                        </div>
+                    </div>
+                </div>
+            </main>
+        </div><!--/. Container -->
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
         <div class="container">
             <img src="assets/images/logo-black.svg" alt="">
             <address class="footer__contacts">
-                <p>New York, Street, ZIP code</p> 
-                <p>Call Us: <a href="tel:+9948373123">+9948373123</a> or E-mail: <a href="mailto:hello@centerlogistic.com">hello@centerlogistic.com</a></p> 
+                <p>New York, Street, ZIP code</p>
+                <p>Call Us: <a href="tel:+9948373123">+9948373123</a> or E-mail: <a
+                        href="mailto:hello@centerlogistic.com">hello@centerlogistic.com</a></p>
             </address>
             <nav class="footer__nav">
                 <a href="#">Terms &amp; Contidions</a>
@@ -50,7 +159,7 @@
             </nav>
         </div><!--/. container -->
     </footer><!--/. footer -->
- 
+
 </body>
 
 </html>
