--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <header class="header">
         <div class="container">
             <div class="header__inner">
-                <img src="assets/images/logo.svg" alt="CenterLogistic">
+                <a href="index.html"><img src="assets/images/logo.svg" alt="CenterLogistic"></a>
 
                 <nav class="nav">
                     <a class="nav__link active" href="#">Services</a>
                     <a class="nav__link" href="#">Clients</a>
                     <a class="nav__link" href="#">Benefits</a>
                     <a class="nav__link" href="#">Team</a>
-                    <a class="nav__link" href="#">News</a>
+                    <a class="nav__link" href="blog.html">News</a>
                     <a class="nav__link" href="#">Contact Us</a>
                 </nav>
             </div>
@@ -376,7 +376,7 @@
 
                 </article>
             </div>
-            <a class="btn  btn--orange btn--shadow" href="#">Visit blog </a>
+            <a class="btn  btn--orange btn--shadow" href="blog.html">Visit blog </a>
         </div><!--/. container -->
     </section><!--/. section -->
 
